@@ -2,6 +2,7 @@ DOMjudge Programming Contest Judging System
 
 Version 2.2.2 - SVN
 -------------------
+ - Delete testcases when a problem is deleted. (Closes: #2144325)
 
 Version 2.2.1 - 31 August 2008
 ------------------------------
